Added Services section

--- a/TechClinic/index.html
+++ b/TechClinic/index.html
@@ -13,22 +13,81 @@
 <body>
 
     <section id="header">
-            <ul id="navbar">
+        <div id="navbar">
+            <ul>
                 <li><a href="#"><img src="img/logo.avif" class="logo" alt="logo"></a></li>
                 <li><a href="">Services</a></li>
                 <li><a href="">FAQs</a></li>
                 <li><a href="">Terms</a></li>
                 <li><a href="">Track Orders</a></li>
             </ul>
+        </div>
     </section>
 
     <section id="hero">
         <div>
-            <h1>Home of</h1>
-            <h1>Tech Service</h1>
-            <p>We provide comprehensive and world-class I.T. 
-            services with our team of skilled technicians. Based in General Santos City, Philippines.</p>
+            <h1 class="big" id="home">Home of</h1>
+            <h1 class="big" id="tech">Tech Service</h1>
+            <p>We provide comprehensive and world-class I.T. services with our <br/>
+            team of skilled technicians. Based in General Santos City, Philippines.</p>
             <button>Learn More</button>
+        </div>
+    </section>
+
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <h3>Brand We Cater</h3>
+            <ul>
+                <li>Apple</li>
+                <li>HP</li>
+                <li>Xiaomi</li>
+                <li>Dell</li>
+                <li>Realme</li>
+                <li>Samsung</li>
+                <li>Vivo</li>
+                <li>Oppo</li>
+                <li>Windows</li>
+            </ul>
+        </div>         
+    </section>
+
+    <section id="services">
+        <div class="se-box">
+            <div id="se-first">
+                <h4>Services Offered</h3>
+                <h2>Repair & Consultancy Services</h2>
+                <p>We guarantee efficient diagnosis and repairs for any kind of unit. You can trust an equal level 
+                of commitment to service regardless of brand, unit, and model.</p>
+            </div>
+            <div>
+                <img src="img/S2.png" alt="">
+                <h3>Parts Replacement</h3>
+                <p>We swiftly replace damaged or malfunctioning components with new, high-quality parts to restore your device's functionality.</p>
+            </div>
+            <div>
+                <img src="img/S6.png" alt="">
+                <h3>Board Level Repair</h3>
+                <p>We diagnose and repair intricate hardware issues at the component level, ensuring optimal performance and longevity for your device.</p>
+            </div>
+            <div>
+                <img src="img/S3.png" alt="">
+                <h3>nit Care & Maintenance</h3>
+                <p>Ensure the longevity and smooth operation of your devices through thorough cleaning, diagnostics, and preventive maintenance measures.
+            <div>
+                <img src="img/S4.png" alt="">
+                <h3>Data Recovery</h3>
+                <p>We'll help you recover lost or corrupted data from various devices, providing you with peace of mind, and the restoration of valuable information.</p>
+            </div>
+            <div>
+                <img src="img/S1.png" alt="">
+                <h3>Unit Upgrade</h3>
+                <p>Our professional unit upgrade service is tailored to enhance speed, storage, and overall performance according to your specific needs.</p>
+            </div>
+            <div>
+                <img src="img/S5.png" alt="">
+                <h3>Software Installation</h3>
+                <p>Let us handle the hassle of software installation, ensuring compatibility and proper configuration for optimal performance of your devices.</p>
+            </div>
         </div>
     </section>
 
